# PECS-CVD-Project

./: README.md
cfd_pycfd/pyCFD/pycfd_3_lab_edition/: QUICKSTART.md  README.md  STUDENT_LAB_MANUAL.md  pyproject.toml
cfd_pycfd/pyCFD/pycfd_3_lab_edition/docs/: MANUSCRIPT_LANGUAGE.md
cfd_pycfd/pyCFD/pycfd_3_lab_edition/examples/: 01_ptbxl_same_encoder.py  02_existing_domains_same_encoder.py  03_prediction_based_cfd.py
cfd_pycfd/pyCFD/pycfd_3_lab_edition/notebooks/: PTBXL_QUICKSTART_COLAB.md
cfd_pycfd/pyCFD/pycfd_3_lab_edition/pycfd/: __init__.py  metrics.py  plotting.py  redundancy.py  report.py  statistics.py  test.py  utils.py
cfd_pycfd/pyCFD/pycfd_3_lab_edition/pycfd/biosignal/: __init__.py  discover.py  domains.py  ptbxl.py
cfd_pycfd/pyCFD/pycfd_3_lab_edition/pycfd/deep/: __init__.py  same_encoder.py
cfd_pycfd/pyCFD/pycfd_3_lab_edition/tests/: test_prediction.py
